<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:text="@string/puzzleSomethingTitle" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:text="@string/buttonLogout" android:onClick="logoutOnClick"/>

    <Button
        android:id="@+id/settingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="settingOnClick"
        android:text="@string/settingButton" />

    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:text="@string/buttonFacebook" android:onClick="facebookOnClick"/>

</LinearLayout>